--- a/RecyclerViewDemo/app/build.gradle
+++ b/RecyclerViewDemo/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation ('jp.wasabeef:recyclerview-animators:2.3.0' ,{
+        exclude group: 'com.android.support'
+    })
 }
